Changelog for Articles.

Articles 1.0.2
===============================
- Add more options for getPage to container settings

Articles 1.0.1
===============================
- Add ability to toggle including and processing of TVs on archive listing pages
- Include new Archivist parameters, &groupByYear and &groupByYearTpl
- [#6252] Fix paging on articles main list page

Articles 1.0.0
===============================
- [#6201] Add ability to import posts+comments from WordPress
- [#6167] Fix issue where unpublished new articles were not showing in grid
- Allow search on articles grid to search tags
- Add content preview for each article to articles grid
- Add bulk publish/unpublish/delete/undelete to articles grid
- [#6202] Add back menuindex into Articles Container settings
- [#6205] Fix array error in article update controller
- [#6168] Prevent creation of Resources below Articles resources
- Fix issue where article tpl was incorrect in container settings
- [#6164] Prevent changing Resource to Articles when using class_key dropdown
- [#6158] Add ability to "undelete" deleted articles
- [#6161] Fix issue with changing article row chunk
- [#6160] Remove template change reloading for Article types
- Custom UI for article posting
- Container-specific settings
- Integrated RSS feeds with customizable URLs
- Integrated Quip commenting
- Automatic archiving of Articles
- Integrated tagging
- Easy templating for containers and articles
- Initial release.