@@ -35,7 +35,7 @@ if ($transport && $transport->xpdo) {
             $modx =& $transport->xpdo;
 
             /* define Archivist version */
-            $newVersion = '1.2.0-pl';
+            $newVersion = '1.2.1-pl';
             $newVersionMajor = '1';
             $name = 'archivist';
 
