@@ -2,6 +2,7 @@ Changelog for Articles.
 
 Articles 1.0.2
 ===============================
+- Vastly improve loading speeds and caching for main articles page
 - Add more options for getPage to container settings
 
 Articles 1.0.1
